--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,6 +47,11 @@ stages:
       workingDirectory: $(projectRoot)
       displayName: "Install requirements"
 
+    - script: |
+        python -m pip install flake8
+        flake8 .
+      displayName: 'Run lint tests'
+      
     - task: ArchiveFiles@2
       displayName: 'Archive files'
       inputs:
